Ajout des étapes oubliées

--- a/recipes/Kebab.html
+++ b/recipes/Kebab.html
@@ -22,6 +22,8 @@
         <li>Sauce blanche maison fraîche herbacé</li>
     </ul>
 
+    <h3> Etapes</h3>
+
     <ol>
         <li>Faire cuire la Viande</li>
         <li>La mettre dans le pain pita</li>
