--- a/recipes/Lasagne.html
+++ b/recipes/Lasagne.html
@@ -22,6 +22,8 @@
         <li>½ cup all-purpose flour</li>
     </ul>
 
+    <h3>Etapes</h3>
+
     <ol>
         <li>Preheat the oven to 350 degrees F (175 degrees C)</li>
         <li>Bring a large pot of lightly salted water to a boil. Add lasagna noodles and cook for 8 to 10 minutes or until al dente; drain and rinse with cold water. </li>
