--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -22,7 +22,7 @@
     <li>15cl d'Huile d'olive</li>
 </ul>
 
-<p>Passons désormais à la mise en pratique des éléments et l'élaboration de la recette.</p>
+<h3>Etapes</h3>>
 
 <ol>
     <li>Tout d'abord j'étale ma pate à l'aide de mes mains ou d'un rouleau à pâte.</li>
