Modif des étapes

--- a/recipes/Kebab.html
+++ b/recipes/Kebab.html
@@ -12,7 +12,7 @@
     <h3>Cuisiner un délicieux Kebab</h3>
     <p><em>Recette classique d'un bon Kebab bien franchouillard et digestif</em></p>
 
-    <h3>Ingrédients nécessaires</h3>
+    <h3>INGREDIENTS</h3>
     
     <ul>
         <li>100g de Viande Kebab</li>
@@ -22,7 +22,7 @@
         <li>Sauce blanche maison fraîche herbacé</li>
     </ul>
 
-    <h3> Etapes</h3>
+    <h3><strong>ETAPES</strong></h3>
 
     <ol>
         <li>Faire cuire la Viande</li>
