--- a/recipes/Lasagne.html
+++ b/recipes/Lasagne.html
@@ -12,7 +12,7 @@
     <h3>Cuisiner des Lasagnes</h3>
     <p><em>Recette de lasagne au fromage blanc classique.</em></p>
 
-    <h3>Ingrédients nécessaires</h3>
+    <h3>INGREDIENTS</h3>
     
     <ul>
         <li>9 lasagna noodles</li>
@@ -22,7 +22,7 @@
         <li>½ cup all-purpose flour</li>
     </ul>
 
-    <h3>Etapes</h3>
+    <h3><Strong>ETAPES</Strong></h3>
 
     <ol>
         <li>Preheat the oven to 350 degrees F (175 degrees C)</li>
