--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -22,7 +22,7 @@
     <li>15cl d'Huile d'olive</li>
 </ul>
 
-<h3>Etapes</h3>>
+<h3><strong>ETAPES</strong></h3>
 
 <ol>
     <li>Tout d'abord j'étale ma pate à l'aide de mes mains ou d'un rouleau à pâte.</li>
@@ -37,7 +37,6 @@
 <ul>
     <li><a href="../recipes/Kebab.html" target="_blank" rel="noopenner noreferrer">Recette de Kebab</a></li>
     <li><a href="../recipes/Lasagne.html" target="_blank" rel="noopenner noreferrer">Recette de Lasagnes</a></li>
-    <li></li>
 </ul>
 
 </body>
